--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.3",
     "sequelize": "^5.21.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint .",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
