--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "mysql": "^2.18.1",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.21.7",
+    "shuffle": "^0.2.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
